# weaver-spec

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.claude/: CLAUDE.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/instructions/: contracts-json.instructions.md  contracts-python.instructions.md  docs.instructions.md
.github/workflows/: ci.yml  links.yml  publish.yml
contracts/json/: README.md  capability.schema.json  capability_token.schema.json  choice_card.schema.json  frame.schema.json  handle.schema.json  policy_decision.schema.json  routing_decision.schema.json  selectable_item.schema.json  trace_event.schema.json
contracts/python/: README.md  pyproject.toml
contracts/python/src/weaver_contracts/: __init__.py  core.py  extended.py  version.py
contracts/python/tests/: test_extended.py  test_json_schema_alignment.py  test_roundtrip_examples.py
docs/: ADOPTION_GUIDE.md  ARCHITECTURE.md  BOUNDARIES.md  FAQ.md  GLOSSARY.md  INVARIANTS.md  SEQUENCE_DIAGRAMS.md  VERSIONING.md  VISION.md
docs/adr/: README.md  template.md
docs/agent-context/: architecture.md  invariants.md  lessons-learned.md  review-checklist.md  workflows.md
examples/: minimal_e2e_sequence.md
examples/sample_payloads/: capability_token.json  extended_frame_metadata.json  extended_selectable_item_metadata.json  frame_with_handles.json  redaction_policy.json  risk_assessment.json  routing_decision.json  ui_hint.json  (+2 more)
